--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -528,16 +528,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-today-vless-node.htm" title="顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/news/article-155151.htm" title="破解网络屏障：谷歌科学上网的全方位指南">破解网络屏障：谷歌科学上网的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-150472.htm" title="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧">打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-clash-v2ray-ss-ssr.htm" title="梯子机场 - 8月11日19.7M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月11日19.7M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149376.htm" title="全面攻克Clash订阅更新失败：从诊断到预防的完整指南">全面攻克Clash订阅更新失败：从诊断到预防的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-151890.htm" title="如何配置Vmess协议：完整的使用与优化指南">如何配置Vmess协议：完整的使用与优化指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share-links.htm" title="顶级代理服务器 - 9月22日21.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅机场推荐">顶级代理服务器 - 9月22日21.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share.htm" title="顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-subscribe-node.htm" title="顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-clash-meta-github.htm" title="梯子机场 - 8月14日20.9M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月14日20.9M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-4-vless-node.htm" title="顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -548,6 +548,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
