--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -265,16 +265,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-today-vless-node.htm" title="顶级代理服务器 - 9月17日20.6M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月17日20.6M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="顶级代理服务器 - 9月16日20M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月16日20M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-today-vless-node.htm" title="顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-152609.htm" title="突破边界：手机科学上网浏览器全方位使用指南与深度解析">突破边界：手机科学上网浏览器全方位使用指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
-                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-151890.htm" title="如何配置Vmess协议：完整的使用与优化指南">如何配置Vmess协议：完整的使用与优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share.htm" title="顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-6-clash-verge-rev-github.htm" title="梯子机场 - 8月6日18.8M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月6日18.8M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-150472.htm" title="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧">打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -285,6 +285,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
