--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -265,16 +265,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-today-vless-node.htm" title="顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-155151.htm" title="破解网络屏障：谷歌科学上网的全方位指南">破解网络屏障：谷歌科学上网的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-today-vless-node.htm" title="顶级代理服务器 - 9月24日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 9月24日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-today-vless-node.htm" title="顶级代理服务器 - 9月17日20.6M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月17日20.6M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150909.htm" title="深度解析 Shadowrocket PP 2019：从入门到精通的完整指南">深度解析 Shadowrocket PP 2019：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-11-clash-v2ray-ss-ssr.htm" title="梯子机场 - 8月11日19.7M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月11日19.7M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-today-vless-node.htm" title="顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154045.htm" title="深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略">深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-clash-meta-github.htm" title="梯子机场 - 8月14日20.9M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月14日20.9M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-node-share.htm" title="顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐">顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -285,6 +285,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
