--- a/free-nodes/page-5.htm
+++ b/free-nodes/page-5.htm
@@ -5,15 +5,18 @@
         <link rel="canonical" href="https://topproxy.github.io/free-nodes/page-5.htm" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>免费节点 - 顶级代理服务器 免费订阅中文网 - 第4页</title>
+    <title>顶级代理服务器 免费节点资源大全 - 高速VPN节点推荐 - 顶级代理服务器 免费订阅中文网 - 第4页</title>
+        <meta name="keywords" content="顶级代理服务器, 免费节点, 节点订阅, 高速VPN, 免费VPN" />
+        <meta name="description" content="顶级代理服务器中文站提供丰富免费节点资源，助您轻松订阅高质量高速VPN节点。" />
         <link rel="icon" href="/assets/website/img/v2raysubscribe/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级代理服务器 免费订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://topproxy.github.io/free-nodes/page-5.htm" />
     <meta property="og:site_name" content="顶级代理服务器 免费订阅中文网" />
-    <meta property="og:title" content="免费节点 - 顶级代理服务器 免费订阅中文网 - 第4页" />
+    <meta property="og:title" content="顶级代理服务器 免费节点资源大全 - 高速VPN节点推荐 - 顶级代理服务器 免费订阅中文网 - 第4页" />
     <meta property="og:image" content="/assets/website/img/v2raysubscribe/favicon.ico" />
+        <meta property="og:description" content="顶级代理服务器中文站提供丰富免费节点资源，助您轻松订阅高质量高速VPN节点。" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -25,7 +28,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免费节点 - 顶级代理服务器 免费订阅中文网 - 第4页">
+    <meta name="apple-mobile-web-app-title" content="顶级代理服务器 免费节点资源大全 - 高速VPN节点推荐 - 顶级代理服务器 免费订阅中文网 - 第4页">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -76,7 +79,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a href="/" class="navbar-brand">
-                                                <span>顶级代理服务器</span>
+                                                <span>顶级代理节点</span>
                                             </a>
                     <div class="navbar-buttons">
                         <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle navbar-btn">Menu<i class="pe-7s-menu"></i></button>
@@ -85,6 +88,7 @@
                 <div id="navigation" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                                                 <li><a href="/">首页</a></li>
+                                                <li><a href="/free-nodes/">免费节点</a></li>
                                                 <li><a href="/paid-subscribe/">推荐机场</a></li>
                                                 <li><a href="/news/">新闻资讯</a></li>
                                                 <li><a href="/client.htm">客户端</a></li>
@@ -110,88 +114,32 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-12">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-05">
                                 <div class="col-md-3">
-                                    <a href="/free-nodes/2025-7-12-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 7月12日18.1M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，VPN节点购买推荐" src="/uploads/20240808/08dfe757e4334b8938bc05571932ec01.webp" class="img-responsive">
+                                    <a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" class="xcblog-blog-url">
+                                        <img alt="梯子机场 - 8月5日18.8M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点推荐，VPN节点购买推荐" src="/uploads/20240808/edaf5798257318a80c710627795cd1bb.webp" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="col-md-9">
-                                    <a href="/free-nodes/2025-7-12-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" class="xcblog-blog-url">
                                         <h3>
-                                            梯子机场 - 7月12日18.1M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，VPN节点购买推荐                                        </h3>
+                                            梯子机场 - 8月5日18.8M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点推荐，VPN节点购买推荐                                        </h3>
                                     </a>
-                                    <p>这一次的节点更新覆盖了新加坡、日本、加拿大、韩国、美国、香港、欧洲等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p>这一次的节点更新覆盖了韩国、美国、香港、日本、加拿大、欧洲、新加坡等地区,最高速度可达18.8 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-11">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-04">
                                 <div class="col-md-3">
-                                    <a href="/free-nodes/2025-7-11-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐" src="/uploads/20240808/7d85ae3ef5a3d061f538fd9cf5fd1080.webp" class="img-responsive">
+                                    <a href="/free-nodes/2025-8-4-node-share.htm" class="xcblog-blog-url">
+                                        <img alt="梯子机场 - 8月4日21.2M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR节点推荐，VPN节点购买推荐" src="/uploads/20240808/d7a90843e4eb3975913e5c72000be941.webp" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="col-md-9">
-                                    <a href="/free-nodes/2025-7-11-clash-verge-rev-nodes.htm" class="xcblog-blog-url">
+                                    <a href="/free-nodes/2025-8-4-node-share.htm" class="xcblog-blog-url">
                                         <h3>
-                                            梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐                                        </h3>
+                                            梯子机场 - 8月4日21.2M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR节点推荐，VPN节点购买推荐                                        </h3>
                                     </a>
-                                    <p>这一次的节点更新覆盖了欧洲、新加坡、美国、加拿大、韩国、日本、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-09">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-7-9-clash-node.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐" src="/uploads/20240808/a7e9b95248f5f3cd5a557f6fe4338629.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-7-9-clash-node.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐                                        </h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了美国、日本、加拿大、韩国、新加坡、香港、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-08">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-7-8-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐" src="/uploads/20240808/f593196c1979d365bc9f5661fec9b522.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-7-8-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐                                        </h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、日本、美国、加拿大、香港、新加坡、欧洲等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-07">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-7-7-clash-verge-rev-windows.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐" src="/uploads/20240808/72ce8b2c5fc779665a5819f4e072adda.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-7-7-clash-verge-rev-windows.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐                                        </h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、欧洲、美国、新加坡、韩国、香港、日本等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-07-06">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-7-6-node-share.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐" src="/uploads/20240808/047af31d8c23ba140291cc63abfe7ece.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-7-6-node-share.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐                                        </h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、欧洲、美国、新加坡、加拿大、韩国、日本等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p>这一次的节点更新覆盖了日本、新加坡、香港、美国、欧洲、韩国、加拿大等地区,最高速度可达21.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
                             
@@ -204,16 +152,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-node-share.htm" title="梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-19-clash-node-daily-updates.htm" title="梯子机场 - 7月19日22.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月19日22.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-clash-stash-node.htm" title="梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-clash-verge-rev-node-share.htm" title="梯子机场 - 7月25日21.3M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月25日21.3M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-147673.htm" title="深入探索Clash官方网站：从入门到精通的全方位使用指南">深入探索Clash官方网站：从入门到精通的全方位使用指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-clash-v2ray-ss-ssr.htm" title="梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-26-clash-verge-rev-nodes.htm" title="梯子机场 - 7月26日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月26日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150909.htm" title="深度解析 Shadowrocket PP 2019：从入门到精通的完整指南">深度解析 Shadowrocket PP 2019：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-clash-verge-rev-nodes.htm" title="梯子机场 - 7月20日19.2M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月20日19.2M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151200.htm" title="突破网络边界：云主机科学上网终极指南与深度解析">突破网络边界：云主机科学上网终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-150126.htm" title="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南">美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-152229.htm" title="手机科学上网全攻略：解锁网络自由与安全新境界">手机科学上网全攻略：解锁网络自由与安全新境界</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-clash-stash-node.htm" title="梯子机场 - 8月21日18.4M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月21日18.4M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray节点/SSR/Shadowrocket节点/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -225,13 +173,13 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                     </ul>
     </div>
@@ -246,8 +194,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                                                <p>
+                                                <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
+                    <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
@@ -256,7 +206,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                            <p>&copy;2025 Best company</p>
+                                                <p>&copy;2025 Best company</p>
                         </div>
                         <div class="col-md-6">
                             <p class="credit pull-right">
