--- a/date/2025-09/page-3.htm
+++ b/date/2025-09/page-3.htm
@@ -181,16 +181,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-node-share.htm" title="顶级代理服务器 - 10月12日18.9M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐">顶级代理服务器 - 10月12日18.9M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="顶级代理服务器 - 9月16日20M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月16日20M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-today-vless-node.htm" title="顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-23-vless-node-share.htm" title="顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐">顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-vless-node-github.htm" title="顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share.htm" title="顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月26日18.7M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-vless-github.htm" title="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-node-share.htm" title="顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐">顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-today-vless-node.htm" title="顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-today-vless-node.htm" title="顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153329.htm" title="突破网络边界：贴吧自由访问的全方位科学上网指南">突破网络边界：贴吧自由访问的全方位科学上网指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-vless-github.htm" title="顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -202,7 +202,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
