--- a/free-nodes/2025-10-12-node-share.htm
+++ b/free-nodes/2025-10-12-node-share.htm
@@ -324,6 +324,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-10-11-vless-node-github.htm">顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-10-13-vless-node.htm">顶级代理服务器 - 10月13日21.6M/S|免费V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -352,16 +353,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share-links.htm" title="顶级代理服务器 - 9月22日21.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅机场推荐">顶级代理服务器 - 9月22日21.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share-links.htm" title="顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray订阅机场推荐">顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-today-vless-node.htm" title="顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-subscribe-node.htm" title="顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-25-vless-node-github.htm" title="顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-today-vless-node.htm" title="顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月29日23M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-vless-node-share.htm" title="顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐">顶级代理服务器 - 9月23日22.7M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-2-today-vless-node.htm" title="顶级代理服务器 - 10月2日21M/S|免费V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月2日21M/S|免费V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash节点/V2ray节点/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-node-share.htm" title="顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-node-share.htm" title="顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐">顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154045.htm" title="深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略">深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -373,7 +374,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
