--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -5,18 +5,18 @@
         <link rel="canonical" href="http://cgp2-d.com/paid-subscribe/" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网</title>
-        <meta name="keywords" content="购买Clash节点推荐,Trojan机场排名,V2ray机场排名,中国国内好用的翻墙VPN推荐,购买代理机场排名,付费好用机场推荐,购买翻墙VPN排名" />
-        <meta name="description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - 顶级代理服务器 免费订阅中文网" />
+    <title>2025 年临时出差便携付费机场推荐 — 高速稳定接入</title>
+        <meta name="keywords" content="出差VPN,便携VPN,旅行VPN,Clash节点,V2ray机场,付费机场" />
+        <meta name="description" content="推荐适合临时出差和旅行使用的付费机场，快速稳定接入网络。" />
         <link rel="icon" href="/assets/website/img/v2raysubscribe/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级代理服务器 免费订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="http://cgp2-d.com/paid-subscribe/" />
     <meta property="og:site_name" content="顶级代理服务器 免费订阅中文网" />
-    <meta property="og:title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网" />
+    <meta property="og:title" content="2025 年临时出差便携付费机场推荐 — 高速稳定接入" />
     <meta property="og:image" content="/assets/website/img/v2raysubscribe/favicon.ico" />
-        <meta property="og:description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - 顶级代理服务器 免费订阅中文网" />
+        <meta property="og:description" content="推荐适合临时出差和旅行使用的付费机场，快速稳定接入网络。" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -28,7 +28,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 顶级代理服务器 免费订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="2025 年临时出差便携付费机场推荐 — 高速稳定接入">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -101,10 +101,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>付费机场订阅推荐</h1>
+                        <h1>临时出差便携付费机场推荐</h1>
                         <p class="weight-300">
-                            <a href="/">首页</a> / 付费机场订阅推荐
-                        </p>
+                            <a href="/">首页</a> / 临时出差便携付费机场推荐                        </p>
                     </div>
                 </div>
             </div>
@@ -114,7 +113,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
-                                                                                <div class="panel panel-default">
+                                                    <p>出差或旅行用户可通过这些付费机场快速接入网络，节点稳定可靠，支持 Clash 与 V2ray 客户端，轻松访问海外网站和服务，体验高速稳定网络。</p>                            <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
@@ -528,16 +527,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share-links.htm" title="顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray订阅机场推荐">顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-1-vless-node.htm" title="顶级代理服务器 - 10月1日18.1M/S|免费Clash节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月1日18.1M/S|免费Clash节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-153329.htm" title="突破网络边界：贴吧自由访问的全方位科学上网指南">突破网络边界：贴吧自由访问的全方位科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-155151.htm" title="破解网络屏障：谷歌科学上网的全方位指南">破解网络屏障：谷歌科学上网的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-vless-node-github.htm" title="顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月25日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-today-vless-node.htm" title="顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-today-vless-node.htm" title="顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-vless-github.htm" title="顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-free-node-subscribe.htm" title="顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-11-vless-node-github.htm" title="顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-vless-github.htm" title="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-node-share-links.htm" title="顶级代理服务器 - 9月27日18.9M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 9月27日18.9M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share-links.htm" title="顶级代理服务器 - 9月22日21.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅机场推荐">顶级代理服务器 - 9月22日21.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-4-vless-node.htm" title="顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -549,7 +548,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
