--- a/privacy.htm
+++ b/privacy.htm
@@ -167,16 +167,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-today-vless-node.htm" title="顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-3-free-subscribe-node.htm" title="顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-vless-node-share.htm" title="顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-node-share-links.htm" title="顶级代理服务器 - 9月27日18.9M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 9月27日18.9M/S|免费Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-node-share.htm" title="顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐">顶级代理服务器 - 9月30日18.6M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-vless-node.htm" title="顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-vless-github.htm" title="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐">顶级代理服务器 - 9月21日23M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-vless-node-share.htm" title="顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 9月28日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-vless-github.htm" title="顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="顶级代理服务器 - 9月16日20M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月16日20M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-subscribe-node.htm" title="顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-20-today-vless-node.htm" title="顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月20日22.9M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-1-vless-node.htm" title="顶级代理服务器 - 10月1日18.1M/S|免费Clash节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月1日18.1M/S|免费Clash节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-155151.htm" title="破解网络屏障：谷歌科学上网的全方位指南">破解网络屏障：谷歌科学上网的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-today-vless-node.htm" title="顶级代理服务器 - 9月24日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 9月24日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-today-vless-node.htm" title="顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -188,7 +188,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
